<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="@string/defaultValueUseVibrator"
        android:key="@string/keyUseVibrator"
        android:summaryOff="@string/summaryOffUseVibrator"
        android:summaryOn="@string/summaryOnUseVibrator"
        android:title="@string/titleUseVibrator" />

    <EditTextPreference
        android:defaultValue="@string/defaultValueVibratorDuration"
        android:dependency="@string/keyUseVibrator"
        android:key="@string/keyVibratorDuration"
        android:maxLength="1"
        android:numeric="integer"
        android:summary="@string/summaryVibratorDuration"
        android:title="@string/titleVibratorDuration" />

</PreferenceScreen>